--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "static-site",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js --watch"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.2.3"
+    "inquirer": "8.2.4"
   }
 }
